mcs/mbas/Test/errors/SingleTypeCharTestC3.vb
REM LineNo: 7
REM ExpectedError: BC30205
REM ErrorMessage: End of statement expected.

Module M
	Sub Main()
		Dim c !
	End Sub
End Module
